# tbv_slam_public

./: README.md
1_baseline/: 1_baseline.py
coral_alignment_quality/: CMakeLists.txt  README.md  package.xml  requirements.txt
coral_alignment_quality/eval/matlab/: DifferentialInformation.m  OpenAll.m  ReadInformation.m  compare.m  test_cov.m  test_cov.m~
coral_alignment_quality/include/alignment_checker/: AlignmentQuality.h  DataHandler.h  ScanEvaluator.h  ScanType.h  Utils.h  alignmentinterface.h
coral_alignment_quality/include/alignment_checker/legacy/: alignmenttester.h  ndtScanComparsion.h  scan.h  scancomparsion.h  viewer.h
coral_alignment_quality/launch/: cluster_arla.launch  orkla_coral_service.launch  vis.launch
coral_alignment_quality/matlab/: LoadEvaluation.m  PlotSeparability.m  ReadAllCSVRegularExp.m  createFit.m  pdf_entropy.fig  surfaceplot.m  visualize_distributions.m
coral_alignment_quality/matlab/Learning/: AllDatasetClassifierEvaluation.m  ClassifierEvaluation.m  Cross_dataset_evaluation.fig  EvaluateAndPlot.m  EvaluateAndPlot.m~  GeneralizationClassifierEvaluation.m  IntraDatasetClassifierEvaluation.m  IntraDatasetClassifierEvaluation.m~  LoadEvaluation.m  intra_dataset_evaluation.fig  logisticAllDatasetClassifierEvaluation.m  logisticGeneralizationClassifier.m  logisticIntraDataset.m  matlab.mat  trainClassifier.m
coral_alignment_quality/matlab/Learning/ETH/: d=0.1_a=0.01_Inter_ETH.fig  d=0.1_a=0.01_Joint_ETH.fig
coral_alignment_quality/matlab/Learning/logistics/: d=0.16_a=0.05_crossdataset_arla_orkla.fig  untitled.fig
coral_alignment_quality/matlab/distribution/: Separability.fig  aligned_distributions.fig  misaligned_distributions.fig
coral_alignment_quality/python/: alignment_service.py  classify.py  evaluate.py  parameters.py  plotting.py  statistics.py  utils.py
coral_alignment_quality/rviz/: alignment_arla.rviz  alignment_origin.rviz  coral_server_orkla.rviz  vis.rviz  vis_old.rviz
coral_alignment_quality/script/legacy/arla/: test_alignment_arla  view_score
coral_alignment_quality/script/legacy/challanging_datasets/: angular_surface.txt  large_surface_stairs  small_pos_offset.txt  surface_stairs  test_alignment_ETH  test_all_ETH  view_score_eth_stairs
coral_alignment_quality/script/legacy/orkla/: orkla_only_test  surface_orkla  test_alignment_orkla  test_logistics  view_score_orkla
coral_alignment_quality/script/oxford/: bfar.sh  classify_mulran.sh  classify_oxford.sh  classify_oxford_coral.sh  eval.py  run_test.sh  test_cen.sh
coral_alignment_quality/script/oxford/generalization_eval/: eval_all.sh  execute.sh  mulran_pars.sh  oxford_pars.sh
coral_alignment_quality/src/: evaluate_scans.cpp
coral_alignment_quality/src/alignment_checker/: AlignmentQuality.cpp  DataHandler.cpp  ScanEvaluator.cpp  ScanType.cpp  Utils.cpp  alignmentinterface.cpp
coral_alignment_quality/src/legacy/: CorAlServer.cpp  alignmenttester.cpp  function_surface.cpp  ndtScanComparsion.cpp  scan.cpp  scancomparsion.cpp  score_viewer.cpp  test_alignment.cpp  viewer.cpp
coral_alignment_quality/srv/: AlignmentData.srv
coral_alignment_quality/test/: README.md  python_classifier_interface_tests.cpp  scan_learning_interface_tests.cpp
place_recognition_radar/: CMakeLists.txt  README.md  package.xml
place_recognition_radar/example_script/kaist02/: 1_training_kaist02.sh  2_eval_sc_coral_kaist02.sh  2_eval_sc_kaist02.sh  3_plot_eval_sc_coral_kaist02.sh
place_recognition_radar/example_script/oxford/: 1_training_oxford.sh  2_eval_sc_coral_oxford.sh  3_plot_eval_sc_coral_oxford.sh
place_recognition_radar/example_script/riverside01/: 2_eval_sc_riverside01.sh
place_recognition_radar/include/place_recognition_radar/: EvaluationManager.h  KDTreeVectorOfVectorsAdaptor.h  RadarScancontext.h  Scancontext.h
place_recognition_radar/parameters/: sc_coral_dcc.txt  sc_coral_kaist.txt  sc_coral_oxford.txt  sc_coral_riverside.txt
place_recognition_radar/python/: CandidateGraphBar.py  CandidatesGraphLine.py  LoopClassifier.py  LoopClosureEval.py  vis_loops.py
place_recognition_radar/rviz/: full_map.rviz
place_recognition_radar/src/: README.md  plot_saver_simplified.py
place_recognition_radar/src/place_recognition_radar/: EvaluationManager.cpp  RadarScancontext.cpp  Scancontext.cpp
tbv_slam/: CMakeLists.txt  README.md  package.xml
tbv_slam/cfg/: OptimizationParams.cfg
tbv_slam/docker/: Dockerfile  run_docker.sh
tbv_slam/include/tbv_slam/: ceresoptimizer.h  loopclosure.h  pose_graph_optimization.h  posegraph.h  read_g2o.h  safe_queue.h  tbv_slam.h  utils.h
tbv_slam/launch/: bt_slam.launch  optimize.launch  radar_slam_vis.launch  radar_slam_vis_demo.launch  radar_slam_vis_no_gt.launch
tbv_slam/model_parameters/: combined.txt  tbv_model_1.txt  tbv_model_8.txt  trained_alignment_classifier.txt  trained_loop_classifier.txt
tbv_slam/python/: eval.py  merge_eval.py
tbv_slam/rviz/: radar_slam.rviz  radar_slam_demo.rviz  radar_slam_demo_global_map.rviz  radar_slam_no_gt.rviz  radar_slam_training.rviz
tbv_slam/script/: 10-12-32_run_vis.sh  run_eval.sh  run_online.sh  run_vis.sh
tbv_slam/script/boreas/: run_tbv_simple.sh
tbv_slam/script/boreas/tbv_eval/: run_eval_boreas_all_tbv8.sh
tbv_slam/script/boreas/training/: odometry_training_boreas  precompute_odometry_boreas
tbv_slam/script/debug/riverside/: 1_riverside01_no_optimization.sh  2_riverside01_optimization_only.sh
tbv_slam/script/kvarntorp/: run_parallel.sh
tbv_slam/script/kvarntorp/tbv_eval/: run_eval_kvarntorp_tbv8.sh
tbv_slam/script/kvarntorp/training/: odometry_training_kvarntorp  precompute_odometry_kvarntorp
tbv_slam/script/mulran/: run_tbv_simple.sh
tbv_slam/script/oxford/: run_parallel.sh
tbv_slam/script/pars/: par_kvarntorp_tbv_8.csv  par_oxford_tbv_8.csv  par_volvo_tbv_8.csv
tbv_slam/script/volvo/: run_tbv_simple.sh
tbv_slam/src/: graph_optimizer_node.cpp  odometry_training_node.cpp  tbv_slam_offline.cpp  tbv_slam_online.cpp
tbv_slam/src/tbv_slam/: ceresoptimizer.cpp  loopclosure.cpp  pose_graph_optimization.cpp  posegraph.cpp  tbv_slam.cpp  utils.cpp
(+1160 files in other folders)
